# pmsgclient

./: .gitmodules
ios/: .gitignore  CMakeLists.txt  Makefile  README.md
ios/cmake/: AFNetworking.cmake
ios/include/: pmsg.h
ios/include/ChatService/: IChatManager.h  IContactManager.h  IGroupManager.h  ILoginManager.h  IMsgManager.h
ios/include/Models/: PMError.h  PMGroup.h  PMImageMsgBody.h  PMLocationMsgBody.h  PMMsg.h  PMMsgBody.h  PMTextMsgBody.h  PMUser.h
ios/src/: CMakeLists.txt  Makefile  pmsg.m
ios/src/ChatService/: NSMutableURLRequest+Post.h  NSMutableURLRequest+Post.m  PMChatManager.h  PMChatManager.m  PMContactManager.h  PMContactManager.m  PMDBManager.h  PMDBManager.m  PMFileManager.h  PMFileManager.m  PMLoginManager.h  PMLoginManager.m  PMMsgManager.h  PMMsgManager.m  PMWebSocketDelegate.h  PMWebSocketDelegate.m
ios/src/Models/: PMError.m  PMImageMsgBody+Inner.h  PMImageMsgBody.m  PMLocationMsgBody.m  PMMsg+Inner.h  PMMsg+Serial.h  PMMsg.m  PMMsgBody+Inner.h  PMMsgBody+Serial.h  PMMsgBody.m  PMTextMsgBody+Inner.h  PMTextMsgBody+Serial.h  PMTextMsgBody.m
ios/src/websocket/: SRWebSocket.m
ios/test/: CMakeLists.txt  Makefile  main.m
